--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+askama = { version = "0.12.1", features = ["with-axum"] }
+askama_axum = "0.3.0"
 axum = "0.6.20"
+libsql-client = "0.33.1"
 shuttle-axum = "0.33.0"
 shuttle-runtime = "0.33.0"
 tokio = "1.28.2"
